Migrate to standalone Nashorn, renew expired test TLS certificates, and fix test issues
- Migrate from jdk.nashorn to org.openjdk.nashorn:nashorn-core:15.4 for Java 11+ compatibility
- Pin ASM dependencies to 9.1 to resolve dependency convergence with nashorn-core
- Update Nashorn class references in ExpectationSerializer, JavaScriptTemplateEngine, and tests
- Fix thread-safety race condition in JavaScriptTemplateEngine.executeTemplate by adding synchronized
- Renew all three sets of expired test TLS leaf certificates (RSA, EC, separateca) valid until 2031
- Fix mockserver-examples j2objc-annotations dependency convergence failure
- Upgrade Gradle wrapper from 8.0 to 8.14 for Java 21 compatibility
- Add renew-test-certs skill for future certificate renewal